# segmented

./: CMakeLists.txt  Jamroot  README.md  segmented_iterator_traits.hpp
algorithm/: fill.hpp  for_each.hpp  transform.hpp
algorithm/aux/: transform1.hpp
test/: fill_test.cpp  for_each_test.cpp  main.cpp  scoped_timer.hpp  segmented_iterator_traits.hpp  segmented_vector.hpp  transform_test.cpp
